Added separate CSS and SCSS files for DGE and DuCange; still attempting to get DGE's working

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Logeion</title>
 		<link rel="stylesheet" type="text/css" href="css/dvlg.css" />
+        <link rel="stylesheet" type="text/css" href="css/dge.css" />
+        <link rel="stylesheet" type="text/css" href="css/ducange.css" />
 		<link rel="stylesheet" type="text/css" href="css/jquery-ui-1.8.14.custom.css" />
 		<link rel="stylesheet" type="text/css" href="css/jquery.jscrollpane.css" />
 		<link rel="stylesheet" type="text/css" href="css/jquery.qtip.css" />
