--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Logeion</title>
 		<link rel="stylesheet" type="text/css" href="css/dvlg.css" />
-        <link rel="stylesheet" type="text/css" href="css/dge.css" />
+        <!--link rel="stylesheet" type="text/css" href="css/dge.css" /-->
         <link rel="stylesheet" type="text/css" href="css/ducange.css" />
 		<link rel="stylesheet" type="text/css" href="css/jquery-ui-1.8.14.custom.css" />
 		<link rel="stylesheet" type="text/css" href="css/jquery.jscrollpane.css" />
@@ -113,7 +113,7 @@
 				</div>
 
 				<div id="right_side">				
-					<div id="previous_container" class="right_container">
+					<!--div id="previous_container" class="right_container">
 						<div id="previous_title" class="right_title">Previous</div>
 						<ol id="previous">
 							<li id="p0" class="prev_hws"></li>
@@ -127,7 +127,7 @@
 							<li id="p8" class="prev_hws"></li>
 							<li id="p9" class="prev_hws"></li>
 						</ol>
-					</div>
+					</div-->
 				
 					<div id="frequencies_container" class="right_container">
 						<div id="frequencies_title" class="right_title">Frequencies</div>
@@ -228,7 +228,7 @@
 				 * after the hash mark in the url, searches for the word
 				 */
 				$("#wordwheel_container").hide();
-				$("#previous_container").hide();
+				/*$("#previous_container").hide();*/
 				$("#frequencies_container").hide();
 				$("#textbook_container").hide();
 				$("#collocations_container").hide();
@@ -677,7 +677,7 @@
 			 * deactivated in the search process
 			 */
 			function readyPage() {
-				$("#previous_container:hidden").show("slide", { direction: "right" }, "slow");
+				/*$("#previous_container:hidden").show("slide", { direction: "right" }, "slow");*/
 				if ($("#textbook").html() != "") {
 					$("#textbook_container:hidden").show("slide", { direction: "right" }, "slow");
 				}
@@ -850,11 +850,11 @@
 						$("#w" + i).html("");
 					}
 				});
-				$("#previous_container:visible").hide("slide", { direction: "right" }, "slow", function() {
+				/*$("#previous_container:visible").hide("slide", { direction: "right" }, "slow", function() {
 					for (i = 0; i <= 9; i++) {
 						$("#p" + i).html("");
 					}
-				});
+				});*/
 				$("#textbook_container:visible").hide("slide", { direction: "right" }, 0, function(){
 					$("#textbook").html("");
 				});
