Updated about.html and about-logeion-ios.html

--- a/about-logeion-ios.html
+++ b/about-logeion-ios.html
@@ -42,7 +42,7 @@
 <p>Find the <a href="https://itunes.apple.com/us/app/logeion/id727860177?mt=8">Logeion app</a> in Apple's app store.</p>
 <p>We hope you will find Logeion useful! Comments and suggestions: please use the link to <a href="https://docs.google.com/spreadsheet/viewform?formkey=dDJCd2ZsUncyNmlPRWEwU2dROGM4M0E6MQ#gid=0">Report A Problem</a>. We are always interested in adding more dictionaries; please contact Helma Dik (Classics Department, University of Chicago) directly if you have dictionaries that we can use or other assistance or enhancements, as opposed to bugs and errors. </p> 
 	<h2 >Quick Tips</h2>
-	<p><a href="screenshotsphone.html" target="_blank">Consult screen shots for iPhone</a></p>
+	<p><a href="screenshotsphone" target="_blank">Consult screen shots for iPhone</a></p>
 	<p><a href="screenshotsiPad.html" target="_blank">Consult screen shots for iPad</a></p><p>To search for a word start typing in the search box (in the side bar on your iPad; if you don't see it, swipe in from the left margin). As you type your third character the system should start showing you results. Should you be looking for a shorter word, tap search when you have typed the complete word. Tap on the word in the word wheel to see the entry for that word. To dismiss the side bar on the iPhone or in portrait view on the iPad, tap outside the side bar area. To go back to the side bar, swipe in from the left margin. If you have navigated to the Logeion web site or other external links, swipe sideways with four fingers to return to the app. </p>
 	<p>Search for Greek using the modern Greek keyboard. You can switch through your international keyboards using the wire-frame world button to the left of the spacebar. If you have not enabled the Greek keyboard, you can add it through Settings → General → Keyboard → Keyboards → Add New Keyboard… → Greek. For searching Greek you can do so with or without diacritics.</p>
 	<p>When search results include proper names, all uppercase words precede lowercase words in the word wheel. Proper names are often not listed in the Greek dictionaries. To find more information about Greek people and places, try the Latin transliteration as well.</p>
@@ -52,8 +52,8 @@
     <p>For reasons of size, performance, and rights, and because there are only so many hours in a day, the web site and the app differ in a number of ways. We list the most important ones below.
     <ul><li>The web site allows entry of inflected forms because it has access to our morphology database, which is too big to include in the app. If you are trying to track down an inflected form, start by entering just a few characters.</li>
     <li>In the app, you must enter Greek using the built-in Greek keyboard of iOS. On the site, you can also use transliteration. </li>
-    <li>We have agreed not to make the full text of DuCange and the Latin-Dutch dictionary available, so these cannot be included in the app. </li>
-    <li>On the site, we provide example sentences from our corpus, from which users can navigate to the Perseus texts in our database; frequent authors and collocation words link to a search for the relevant lemma in an author, or for the relevant collocations in the corpus. In the app, we omit the example sentences and simply list frequent authors and collocations without links to the corpus. However, selecting a collocation word will bring up a menu, in which 'Look Up' can be used to jump to that word in Logeion. Note that in this same menu, 'Speak' is a built-in feature of iOS; words will be pronounced in a language that iOS knows, which is neither Latin nor ancient Greek.   </li></ul></p>
+    <li>We have agreed not to make the full text of the Latin-Dutch dictionary available, so this cannot be included in the app. </li>
+    <li>On the site, we provide example sentences from our corpus, from which users can navigate to the Perseus texts in our database; frequent authors and collocation words link to a search for the relevant lemma in an author, or for the relevant collocations in the corpus. In the app, we supply the example sentences and frequent authors and collocations without links to the corpus. However, selecting a collocation word will bring up a menu, in which 'Look Up' can be used to jump to that word in Logeion. Note that in this same menu, 'Speak' is a built-in feature of iOS; words will be pronounced in a language that iOS knows, which is neither Latin nor ancient Greek.   </li></ul></p>
     <h2 >Frequency Data</h2>
     <p>The frequency and collocation data included in this app were collated at The University of Chicago.</p>
     <p>The frequency graph is meant to be nothing more than a visual aid. It makes evident that a word is used frequently or otherwise by showing the corresponding bar in red. The data is preprocessed, and grouped by frequency in count. Each group spans a range of about 150 words. That is, if the bar at the far left appears red then the word in question is one of the top 150 most frequently used words.</p>
@@ -64,7 +64,7 @@
     <p><a href="http://perseus.uchicago.edu/Reference/LSJ.html" target="_blank"> Liddell and Scott&#39;s Greek-English Lexicon (1940) </a></p>
     <ul>
         <li> Henry George Liddell &amp; Robert Scott, A Greek-English Lexicon. Revised and augmented throughout by Sir Henry Stuart Jones with the assistance of Roderick McKenzie. Oxford, Clarendon Press, 1940.</li>
-        <li> The National Science Foundation provided support for entering this text.</li>
+        <li> The National Endowment for the Humanities provided support for entering this text.</li>
         <li>  <a href="http://perseus.uchicago.edu/cgi-bin/philologic/getobject.pl?c.0:0.LSJ" target="_blank">XML header</a> of Perseus original.</li>
         <li>You can consult the <a href="http://perseus.uchicago.edu/cgi-bin/philologic/getobject.pl?c.0:2.LSJ" target="_blank"> front matter</a> and the <a href="http://perseus.uchicago.edu/cgi-bin/philologic/getobject.pl?c.0:2:3.LSJ" target="_blank">abbreviations</a>.</li>
     </ul>
@@ -115,6 +115,15 @@ The Greek-Spanish Dictionary (DGE) is produced at the Instituto de Lenguas y Cul
         <li> The National Science Foundation provided support for entering this text.</li>
         <li>  <a href="http://perseus.uchicago.edu/cgi-bin/philologic/getobject.pl?c.0:0.lewis" target="_blank">XML header</a> of Perseus original.</li>
     </ul>
+    <li>DuCange<br>
+<ul>
+<li> A resource for medieval and late Latin: Du Cange, et al., Glossarium mediæ et infimæ latinitatis. Niort : L. Favre, 1883-1887. </li> 
+<li> Open-access resource, published under the auspices of L'École nationale des chartes, <a href="http://www.enc.sorbonne.fr/">http://www.enc.sorbonne.fr/</a></li> 
+<li> People who worked on this resource can be found at <a href="http://ducange.enc.sorbonne.fr/credits">http://ducange.enc.sorbonne.fr/credits</a></li>
+<li> Offered at the Ecole des Chartes under a non-commercial, no-derivatives creative commons license: <a href="http://creativecommons.org/licenses/by-nc-nd/2.0/fr/">http://creativecommons.org/licenses/by-nc-nd/2.0/fr/</a></li>
+<li> We believe that this may be a highly beneficial supplement to Lewis & Short for those working on later texts.</li>
+</ul> 
+<br><br></li>
     <h2 >Reference</h2>
 	<ul> 
 			<li><a href="http://perseus.uchicago.edu/Reference/harpers.html">Harper's Dictionary of Classical Antiquities</a><br>
