--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@ We have now added a Latin-Dutch dictionary to the collection: The <i>Woordenboek
 <li><a href="http://perseus.uchicago.edu/Reference/LSJ.html"> Liddell and Scott's Greek-English Lexicon (1940) </a><br>
 <ul>
 <li> Henry George Liddell &amp; Robert Scott, A Greek-English Lexicon. Revised and augmented throughout by Sir Henry Stuart Jones with the assistance of Roderick McKenzie. Oxford, Clarendon Press, 1940.</li> 
-<li> The National Science Foundation provided support for entering this text.</li> 
+<li> The National Endowment for the Humanities provided support for entering this text.</li> 
 <li> <a href="http://perseus.uchicago.edu/cgi-bin/philologic/getobject.pl?c.0:0.LSJ">XML header</a> of Perseus original.</li> <li>You can consult the <a href="http://perseus.uchicago.edu/cgi-bin/philologic/getobject.pl?c.0:2.LSJ"> front matter</a> and the <a href="http://perseus.uchicago.edu/cgi-bin/philologic/getobject.pl?c.0:2:3.LSJ">abbreviations</a>.</li>
 </ul> 
 <br><br></li> 
